# morph

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  concept.md  pyproject.toml  requirements.txt  setup.py
docs/: api.md  cli.md  developer.md  installation.md  publishing.md  usage.md
examples/: example_usage.py
morph/: __init__.py
morph/cli/: __init__.py  main.py
morph/converters/: __init__.py  audio_converter.py  image_converter.py  video_converter.py
morph/core/: __init__.py  config.py
morph/scrapers/: __init__.py  audio_scraper.py  image_scraper.py  text_scraper.py  video_scraper.py
morph/utils/: __init__.py  downloader.py  exporter.py  validator.py
morph/web/: __init__.py  app.py
morph/web/static/: script.js  style.css
morph/web/templates/: index.html
morphscrapper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_converters.py  test_scrapers.py  test_utils.py
