[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morphscrapper"
version = "0.1.3"
description = "A multi-modal web scraping package for extracting text, images, audio, and video."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Chirag"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "flask>=2.2.0",
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10", "Pillow>=9.0.0"]
audio = ["SpeechRecognition>=3.8.0", "pydub>=0.25.0"]
video = ["moviepy>=1.0.3", "Pillow>=9.0.0"]
all = [
    "pytesseract>=0.3.10",
    "Pillow>=9.0.0",
    "SpeechRecognition>=3.8.0",
    "pydub>=0.25.0",
    "moviepy>=1.0.3",
]

[project.scripts]
morph = "morph.cli.main:main"
